# gravitational-waves

./: .gitignore  README.md  main.py  notes.md  pyproject.toml  references.bib
configs/merger/: injection.ini
configs/models/: decoder.json  encoder.json  info.md
notebooks/: data_inspection.ipynb  evaluate_model.ipynb  fir_filter.ipynb  gw_lib.ipynb  pycbc_std.ipynb
src/: data.py  models.py  train.py  utils.py
