[project]
name = "gravitational-waves"
version = "0.1.0"
description = "A project on gravitational waves from various angles."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.12.0",
    "gwpy>=3.0.13",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "pycbc>=2.10.0",
    "rich>=14.3.1",
    "torch>=2.9.1",
]
